--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,8 @@
 }
 
 body{
+    width: 100%;
+    height: 100vh;
     margin-left: 160px;
     margin-right: 196px;
     background-color: white;
@@ -196,7 +198,7 @@ body{
 
 /* Smartphones (576px para baixo) */
 @media only screen and (max-width: 576px) {
-    
+
 }
 
 /* Dispositivos um pouco maiores, mas ainda pequenos (Pequenos Tablets e Smartphones + largos, 600px para cima) */
